ingress-cert/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-certs
  namespace: k8s-formation
spec:
  selector:
    matchLabels:
      app: kube-certs
  template:
    metadata:
      labels:
        app: kube-certs
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: labs-nginx
        image: nginx
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: kube-certs
  namespace: k8s-formation
spec:
  selector:
    app: kube-certs
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  type: NodePort 
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    kubernetes.io/ingress.class: nginx
  name: kube-certs-ingress
  namespace: k8s-formation
spec:
  rules:
  - host: labs.cadmus-it.com
    http:
      paths:
      - backend:
          service:
            name: kube-certs
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - labs.cadmus-it.com
    secretName: demo
